Catch all failures. Docker image for test